@@ -53,7 +53,7 @@
 #	Simon J. Gerraty <sjg@crufty.net>
 
 # RCSid:
-#	$Id: boot-strap,v 1.32 2010/04/26 00:00:11 sjg Exp $
+#	$Id: boot-strap,v 1.33 2010/05/10 16:48:11 sjg Exp $
 #
 #	@(#) Copyright (c) 2001 Simon J. Gerraty
 #
@@ -295,10 +295,10 @@ if [ -s "${mksrc:-/dev/null}/install-mk" ]; then
 fi
 export MAKESYSPATH
 if [ "$mksrc" ]; then
-        ./bmake test || exit 1
+        $objdir/bmake test || exit 1
 else
         # assume nothing
-        ./bmake -r -m / test || exit 1
+        $objdir/bmake -r -m / test || exit 1
 fi
 # If -q given, we don't want all the install instructions
 $quiet exit 0
